# fragrantica

./: .env.example  .gitignore  .render.yaml  DEPLOY.md  FINAL_SUMMARY.md  IMPORTANT_NOTES.md  PROJECT_STRUCTURE_NEW.md  README.md  README_NEW.md  RENDER_SETUP.md  SUMMARY.md  ai_translator.py  app.py  fragrantica_gologin_fixed.py  fragrantica_gologin_fixed_news_20250803_113644.json  parser_status.json  pyproject.toml  render.yaml  requirements.txt  requirements_render.txt
config/: gologin_config.py  render.yaml
docs/api/: gologin_api.md  gologin_parser.md
docs/guides/: important_notes.md  improvements.md  project_structure.md  selenium_vs_playwright.md  testing.md
frontend/: README.md  sync.sh
frontend/css/: style.css
frontend/js/: app.js
parsers/gologin/: gologin_parser.py  gologin_selenium.py
parsers/legacy/: gologin_correct.py  gologin_fixed.py  simple_gologin.py
parsers/simple/: simple_parser.py  test_parser.py
scripts/: install.sh  reorganize.sh  run.sh
templates/: index.html
utils/: fix_status.py  reset_status.py  translator.py
web/: app.py
web/templates/: index.html
